Update to the latest SQLite that includes recent CLI enhancements, for testing of those enhancements using the "fossil sql" command.  Enable percentile SQL functions, also for testing.
FossilOrigin-Name: 709b566431af6b2609f3b0d076b8200cbec193ea803b13c3934144e84b149a78

--- a/win/Makefile.mingw
+++ b/win/Makefile.mingw
@@ -2560,6 +2560,7 @@ SQLITE_OPTIONS = -DNDEBUG=1 \
                  -DSQLITE_ENABLE_FTS4 \
                  -DSQLITE_ENABLE_FTS5 \
                  -DSQLITE_ENABLE_MATH_FUNCTIONS \
+                 -DSQLITE_ENABLE_PERCENTILE \
                  -DSQLITE_ENABLE_SETLK_TIMEOUT \
                  -DSQLITE_ENABLE_STMTVTAB \
                  -DSQLITE_HAVE_ZLIB \
@@ -2590,6 +2591,7 @@ SHELL_OPTIONS = -DNDEBUG=1 \
                  -DSQLITE_ENABLE_FTS4 \
                  -DSQLITE_ENABLE_FTS5 \
                  -DSQLITE_ENABLE_MATH_FUNCTIONS \
+                 -DSQLITE_ENABLE_PERCENTILE \
                  -DSQLITE_ENABLE_SETLK_TIMEOUT \
                  -DSQLITE_ENABLE_STMTVTAB \
                  -DSQLITE_HAVE_ZLIB \
